removed master from compute if use master as compute is false

--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -69,7 +69,8 @@ SlurmdLogFile=/var/log/slurm/slurmd.log
 # COMPUTE NODES
 {% set sl = {} %}
 {% set all = {"nodes":[]} %}
-{% for node_name in groups.master+groups.workers %}
+{% set master_or_empty = groups.master if use_master_as_compute else [] %}
+{% for node_name in master_or_empty +groups.workers %}
 {% set node = hostvars[node_name] %}
 {% set mem = node.flavor.ram // 1024 * 1000 %}
 {% if node.cloud_identifier not in sl %}
