reconstructured role additional in order to make it easier to include. Added quotes for consistency.

--- a/resources/playbook/roles/bibigrid/tasks/010-bin-server.yml
+++ b/resources/playbook/roles/bibigrid/tasks/010-bin-server.yml
@@ -5,7 +5,7 @@
 - name: Does folder exist
   delegate_to: localhost
   stat:
-    path: ~{{ ansible_facts.env.SUDO_USER }}/bin
+    path: "~{{ ansible_facts.env.SUDO_USER }}/bin"
   register: folder
 
 - when: folder.stat.exists
