many small changes and introducing locks

--- a/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yml
+++ b/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yml
@@ -169,6 +169,7 @@
       - python-openstackclient==6.0.0
       - openstacksdk==0.62.0
       - os_client_config
+      - filelock
       - paramiko
       - ansible-runner
 
