--- a/bibigrid.yml
+++ b/bibigrid.yml
@@ -13,10 +13,10 @@
 
   ## Volumes and snapshots that will be mounted to master
   # autoMount: False # WARNING: will overwrite unidentified filesystems
-  #masterMounts: # KEY NOT FULLY IMPLEMENTED YET
+  #masterMounts:
   #  - [mount one]
 
-  #nfsShares: # KEY NOT FULLY IMPLEMENTED YET; /vol/spool/ is automatically created as a nfs
+  #nfsShares: /vol/spool/ is automatically created as a nfs
   #  - [nfsShare one]
 
   ## Ansible (Galaxy) roles can be added for execution # KEY NOT IMPLEMENTED YET
@@ -48,7 +48,7 @@
   #nfs: True
   #ide: True # A nice way to view your cluster as if you were using Visual Studio Code
 
-  useMasterAsCompute: True # Currently ignored by slurm
+  useMasterAsCompute: True
   
   #waitForServices:  # existing service name that runs after an instance is launched. BiBiGrid's playbook will wait until service is "stopped" to avoid issues
   #  - de.NBI_Bielefeld_environment.service  # uncomment for cloud site Bielefeld
@@ -104,4 +104,4 @@
 
   #features: # list
 
-  #- [next configurations] # KEY NOT IMPLEMENTED YET
+  #- [next configurations]
