--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -109,3 +109,7 @@ SlurmctldParameters=idle_on_node_suspend
 PrivateData=cloud
 # return node to idle when startup fails
 ResumeFailProgram=/opt/slurm/fail.sh
+
+# job container
+JobContainerType=job_container/tmpfs
+PrologFlags=Contain
