Tried to fix temps and tried update to 23.11 but has errors so commented that part out

--- a/resources/playbook/roles/bibigrid/files/slurm/cgroup.conf
+++ b/resources/playbook/roles/bibigrid/files/slurm/cgroup.conf
@@ -1,3 +1,4 @@
+# maybe this causes errors when using 23.11 https://slurm.schedmd.com/faq.html#cgroupv2
 CgroupMountpoint="/sys/fs/cgroup"
 CgroupAutomount=yes
 ConstrainCores=no
