--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -111,5 +111,6 @@ PrivateData=cloud
 ResumeFailProgram=/opt/slurm/fail.sh
 
 # job container
+# TO BE TESTED
 JobContainerType=job_container/tmpfs
 PrologFlags=Contain
