Introduced yaml lock (#464)
* removed unnecessary close

* simplified update_hosts

* updated logging to separate folder and file based on creation date

* many small changes and introducing locks

* restructured log files again. Removed outdated key warnings from bibigrid.yml

* added a few logs

* further improved logging hierarchy

* Added specific folder places for temporary job storage. This might solve the "SlurmSpoolDir full" bug.

* Improved logging

* Tried to fix temps and tried update to 23.11 but has errors so commented that part out

* added initial space

--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -109,3 +109,8 @@ SlurmctldParameters=idle_on_node_suspend
 PrivateData=cloud
 # return node to idle when startup fails
 ResumeFailProgram=/opt/slurm/fail.sh
+
+# job container
+# TO BE TESTED
+JobContainerType=job_container/tmpfs
+PrologFlags=Contain
