--- a/resources/playbook/roles/bibigrid/tasks/042-slurm.yml
+++ b/resources/playbook/roles/bibigrid/tasks/042-slurm.yml
@@ -15,6 +15,15 @@
       - slurm-full
       - munge
 
+# - name: Download Slurm (TEMPORARY)
+#   get_url:
+#     url: "https://docs.cebitec.uni-bielefeld.de/s/FjCP3xQPPnBwSy9/download?path=%2F&files=slurm-full_23.11.0-0_amd64.deb"  # Replace with your package link
+#     dest: "/tmp/package.deb"  # Destination where the package will be saved
+# - name: Install Slurm package
+#   apt:
+#     deb: "/tmp/package.deb"
+#     state: present  # Install the package if not already installed
+
 - name: Create new secret (Munge)
   copy:
     content: '{{ slurm_conf.munge_key }}'
@@ -77,6 +86,17 @@
   template:
     src: slurm/slurm.conf
     dest: /etc/slurm/slurm.conf
+    owner: slurm
+    group: root
+    mode: 0444
+  notify:
+    - slurmctld
+    - slurmd
+
+- name: Create Job Container configuration
+  template:
+    src: slurm/job_container.conf
+    dest: /etc/slurm/job_container.conf
     owner: slurm
     group: root
     mode: 0444
