removed slurm errors

--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -9,7 +9,7 @@ AuthAltParameters=jwt_key=/etc/slurm/jwt-secret.key
 ClusterName=bibigrid
 
 MpiDefault=none
-ProctrackType=proctrack/linuxproc
+ProctrackType=proctrack/cgroup # linuxproc
 ReturnToService=2
 SwitchType=switch/none
 TaskPlugin=task/none
@@ -61,7 +61,7 @@ AccountingStorageHost={{ hostvars[groups.master.0].name | lower }}
 AccountingStorageUser={{ slurm_conf.db_user }}
 
 # LOGGING
-SlurmctldDebug=info
+SlurmctldDebug=debug # info
 SlurmctldLogFile=/var/log/slurm/slurmctld.log
 SlurmdDebug=info
 SlurmdLogFile=/var/log/slurm/slurmd.log
@@ -102,7 +102,7 @@ SuspendExcNodes={{ hostvars[groups.master.0].name }}
 # Maximum number of nodes
 TreeWidth= {{ slurm_conf.elastic_scheduling.TreeWidth }}
 # Do not cache dns names
-CommunicationParameters=NoAddrCache
+# REMOVED CommunicationParameters=NoAddrCache
 # Mark node status idle on suspend so DOWN is removed
 SlurmctldParameters=idle_on_node_suspend
 # Show slurm nodes all the time
