--- a/resources/playbook/roles/bibigrid/handlers/main.yml
+++ b/resources/playbook/roles/bibigrid/handlers/main.yml
@@ -17,22 +17,26 @@
   systemd:
     name: slurmdbd
     state: restarted
+  when: "'vpnwkr' not in group_names"
 
 - name: slurmrestd
   systemd:
     name: slurmrestd
     state: restarted
     daemon_reload: true
+  when: "'vpnwkr' not in group_names"
 
 - name: slurmctld
   systemd:
     name: slurmctld
     state: restarted
+  when: "'master' in group_names"
 
 - name: slurmd
   systemd:
     name: slurmd
     state: restarted
+  when: "'vpnwkr' not in group_names"
 
 - name: zabbix-agent
   systemd:
