--- a/resources/playbook/roles/bibigrid/tasks/main.yml
+++ b/resources/playbook/roles/bibigrid/tasks/main.yml
@@ -136,6 +136,7 @@
     - debug:
         msg: "[BIBIGRID] Setup Slurm"
     - import_tasks: 042-slurm.yml
+      when: "'vpnwkr' not in group_names"
     - import_tasks: 042-slurm-server.yml
       when: "'master' in group_names"
 
