improved comments regarding changes and versions

--- a/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
+++ b/resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
@@ -9,17 +9,15 @@ AuthAltParameters=jwt_key=/etc/slurm/jwt-secret.key
 ClusterName=bibigrid
 
 MpiDefault=none
-ProctrackType=proctrack/cgroup # linuxproc
+ProctrackType=proctrack/cgroup # linuxproc # changed for 23.11.0
 ReturnToService=2
 SwitchType=switch/none
 TaskPlugin=task/none
 #TaskPlugin=task/cgroup
 JobAcctGatherType=jobacct_gather/linux
 
-# see https://slurm.schedmd.com/slurm.conf.html#OPT_cloud_dns:~:text=for%20additional%20details.-,cloud_dns,-By%20default%2C%20Slurm
 # SlurmctldParameters=cloud_dns
-# Funktioniert nicht wie vermutet. slurmctld versucht mit diesem Parameter schon beim Start alle Clients aufzulösen,
-# was natürlich nicht funktioniert.
+# didn't work as expected. slurmctld tries to resolve all clients on startup which doesn't work obviously
 
 # PRIORITY
 PriorityType=priority/multifactor
@@ -37,7 +35,6 @@ SlurmctldPort=6817
 SlurmdPort=6818
 
 # DIRECTORIES
-#JobCheckpointDir=/var/lib/slurm/job_checkpoint
 SlurmdSpoolDir=/var/lib/slurm/slurmd
 StateSaveLocation=/var/lib/slurm/state_checkpoint
 
@@ -102,7 +99,7 @@ SuspendExcNodes={{ hostvars[groups.master.0].name }}
 # Maximum number of nodes
 TreeWidth= {{ slurm_conf.elastic_scheduling.TreeWidth }}
 # Do not cache dns names
-# REMOVED CommunicationParameters=NoAddrCache
+# CommunicationParameters=NoAddrCache # REMOVED for 23.11.0
 # Mark node status idle on suspend so DOWN is removed
 SlurmctldParameters=idle_on_node_suspend
 # Show slurm nodes all the time
