removed cgroupautomount as it is defunct

--- a/resources/playbook/roles/bibigrid/files/slurm/cgroup.conf
+++ b/resources/playbook/roles/bibigrid/files/slurm/cgroup.conf
@@ -1,6 +1,6 @@
 # maybe this causes errors when using 23.11 https://slurm.schedmd.com/faq.html#cgroupv2
 CgroupMountpoint="/sys/fs/cgroup"
-CgroupAutomount=yes
+# CgroupAutomount=yes # REMOVED 23.11.0
 ConstrainCores=no
 ConstrainRAMSpace=yes
 ConstrainSwapSpace=no
