--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,4 @@ updates:
     schedule:
       interval: "daily"
     open-pull-requests-limit: 10
-    versioning-strategy: "widen"
-    target:
-      versions: [">=3.0.0"]
+    versioning-strategy: "auto"
