--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 # variable resources
 resources/playbook/ansible.cfg
+resources/playbook/roles/bibigrid/templates/slurm/slurm.conf
 resources/playbook/site.yml
 resources/playbook/ansible_hosts
 resources/playbook/vars/
