added roles structure

--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,13 @@ resources/playbook/ansible_hosts
 resources/playbook/vars/
 resources/playbook/host_vars/
 resources/playbook/group_vars/
-tests/resources/*
-!test/resources/test_configuration.yml
 
+# Roles
+resources/playbook/roles_galaxy/*
+!resources/playbook/roles_galaxy/README
+resources/playbook/roles_user/*
+!resources/playbook/roles_user/README
+!resources/playbook/roles_user/resistance_nextflow
 # any log files
 *.log
 log/
