--- a/resources/playbook/roles/bibigrid/tasks/042-slurm.yml
+++ b/resources/playbook/roles/bibigrid/tasks/042-slurm.yml
@@ -9,10 +9,22 @@
     uid: 64030
     group: slurm
 
-- name: Install Slurm package (and dependencies)
+- name: Create pinning configuration for slurm-bibigrid version 23.11.*
+  copy:
+    content: |
+      Package: slurm-bibigrid
+      Pin: version 23.11.*
+      Pin-Priority: 1001
+    dest: /etc/apt/preferences.d/slurm-bibigrid
+
+- name: Install slurm-bibigrid package
+  apt:
+    name: slurm-bibigrid
+    state: present
+
+- name: Install Slurm package dependencies
   apt:
     name:
-      - slurm-bibigrid=23.11.*
       - munge
 
 - name: Create new secret (Munge)
