changed ignore_error to failed_when false

--- a/resources/playbook/roles/bibigrid/tasks/020-disk-server.yml
+++ b/resources/playbook/roles/bibigrid/tasks/020-disk-server.yml
@@ -42,4 +42,4 @@
         state: mounted
       with_items: "{{ volumes }}"
   when: volumes is defined and auto_mount
-  ignore_errors: true
+  failed_when: false
