Slurm upgrade fixes (#473)
* removed slurm errors

* added bibilog to show output log of most recent worker start. Tried fixing the slurm23.11 bug.

* fixed a few vpnwkr -> vpngtw remnants. Excluded vpngtw from slurm setup

* improved comments regarding changes and versions

* removed cgroupautomount as it is defunct

* Moved explicit slurm start to avoid errors caused by resume and suspend programs not being copied to their final location yet

* added word for clarification

* Fixed non-fatal bug that lead to non 0 exits on runs without any error.

* changed slurm apt package to slurm-bibigrid

* set version to 23.11.*

* added a few more checks to make sure everything is set up before installing packages

* Added configuration pinning

* changed ignore_error to failed_when false

* fixed or ignored lint fatals

--- a/resources/playbook/roles/bibigrid/tasks/020-disk-server.yml
+++ b/resources/playbook/roles/bibigrid/tasks/020-disk-server.yml
@@ -17,7 +17,9 @@
     - "{{ master.disks }}"
   when: master.disks is defined
 
-- block:
+- when: volumes is defined and auto_mount
+  failed_when: false
+  block:
     - name: Make sure disks are available
       filesystem:
         fstype: ext4
@@ -36,10 +38,9 @@
       with_items: "{{ volumes }}"
 
     - name: Mount disks
+
       mount:
         path: "{{ item.name }}"
         src: "{{ item.device }}"
         state: mounted
       with_items: "{{ volumes }}"
-  when: volumes is defined and auto_mount
-  ignore_errors: true
