--- a/resources/playbook/roles/bibigrid/tasks/042-slurm.yml
+++ b/resources/playbook/roles/bibigrid/tasks/042-slurm.yml
@@ -9,20 +9,24 @@
     uid: 64030
     group: slurm
 
-- name: Install Slurm package (and dependencies)
+- name: Create pinning configuration for slurm-bibigrid version 23.11.*
+  copy:
+    content: |
+      Package: slurm-bibigrid
+      Pin: version 23.11.*
+      Pin-Priority: 1001
+    dest: /etc/apt/preferences.d/slurm-bibigrid
+    mode: '0311'
+
+- name: Install slurm-bibigrid package
+  apt:
+    name: slurm-bibigrid
+    state: present
+
+- name: Install Slurm package dependencies
   apt:
     name:
-      - slurm-full
       - munge
-
-# - name: Download Slurm (TEMPORARY)
-#   get_url:
-#     url: "https://docs.cebitec.uni-bielefeld.de/s/FjCP3xQPPnBwSy9/download?path=%2F&files=slurm-full_23.11.0-0_amd64.deb"  # Replace with your package link
-#     dest: "/tmp/package.deb"  # Destination where the package will be saved
-# - name: Install Slurm package
-#   apt:
-#     deb: "/tmp/package.deb"
-#     state: present  # Install the package if not already installed
 
 - name: Create new secret (Munge)
   copy:
