--- a/resources/defaults/ansible/ansible.cfg
+++ b/resources/defaults/ansible/ansible.cfg
@@ -1,6 +1,6 @@
 # This file is moved programmatically to /etc/ansible/ansible.cfg on the master so it shouldn't be moved manually
 [defaults]
-roles_path = "/opt/playbook/roles:/opt/playbook/roles_galaxy:/opt/playbook/roles_user"
+roles_path = /opt/playbook/roles:/opt/playbook/roles_galaxy:/opt/playbook/roles_user
 inventory = ./ansible_hosts
 host_key_checking = False
 forks=50
