--- a/resources/playbook/roles/bibigrid/tasks/000-add-ip-routes.yml
+++ b/resources/playbook/roles/bibigrid/tasks/000-add-ip-routes.yml
@@ -16,6 +16,7 @@
         owner: root
         group: root
         mode: 0644
+        remote_src: true
       with_items: "{{ collected_files.files }}"
     - name: Remove collected files
       file:
