made automount bound to defined mountPoints and therefore customizable

--- a/resources/playbook/roles/bibigrid/tasks/020-disk-server-automount.yml
+++ b/resources/playbook/roles/bibigrid/tasks/020-disk-server-automount.yml
@@ -1,4 +1,5 @@
-- block:
+- when: item.mount_point is defined
+  block:
     - name: Make sure disks are available
       failed_when: false
       filesystem:
