fixed nfsshare regex error and updated check to fit to the new name mountpoint pattern

--- a/resources/playbook/roles/bibigrid/tasks/020-disk-server-automount.yml
+++ b/resources/playbook/roles/bibigrid/tasks/020-disk-server-automount.yml
@@ -19,7 +19,7 @@
 
     - name: Create mount folders if they don't exist
       file:
-        path: "/vol/{{ item.name }}"
+        path: "/vol/{{ item.mount_point }}"
         state: directory
         mode: '0755'
         owner: root
@@ -27,7 +27,7 @@
 
     - name: Mount disks
       mount:
-        path: "/vol/{{ item.name }}"
+        path: "{{ item.mount_point }}"
         src: "{{ item.device }}"
         state: mounted
         fstype: "{{ filesystem_type.stdout }}"
