--- a/resources/playbook/roles/bibigrid/tasks/main.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/main.yaml
@@ -16,27 +16,27 @@
 - name: Setup persistent ip routes
   when: "'workers' in group_names and wireguard_common is defined"
   block:
-    - name: Running 000-add-ip-routes.yml
+    - name: Running 000-add-ip-routes.yaml
       debug:
         msg: "[BIBIGRID] Adding ip routes"
-    - import_tasks: 000-add-ip-routes.yml
+    - import_tasks: 000-add-ip-routes.yaml
 
 - name: Setup common software and dependencies - server rights
   when: "'master' in group_names"
   block:
-    - name: Running 000-playbook-rights-server.yml
+    - name: Running 000-playbook-rights-server.yaml
       debug:
         msg: "[BIBIGRID] Update permissions"
-    - import_tasks: 000-playbook-rights-server.yml
+    - import_tasks: 000-playbook-rights-server.yaml
 
 - name: Setup common software and dependencies for Debian
   when: "ansible_distribution_file_variety == 'Debian'"
   tags: ["pkg"]
   block:
-    - name: Running 001-apt.yml
+    - name: Running 001-apt.yaml
       debug:
         msg: "[BIBIGRID] Setup common software and dependencies"
-    - import_tasks: 001-apt.yml
+    - import_tasks: 001-apt.yaml
 
 - name: Setup common software and dependencies for RedHat
   when: "ansible_distribution_file_variety == 'RedHat'"
@@ -44,7 +44,7 @@
   block:
     - debug:
         msg: "[BIBIGRID] Setup common software and dependencies"
-    - import_tasks: 001-yum.yml
+    - import_tasks: 001-yum.yaml
 
 - name: Configure Wireguard for VPNs
   when: "'vpn' in group_names and wireguard is defined"
@@ -52,7 +52,7 @@
   block:
     - debug:
         msg: "[BIBIGRID] Configure Wireguard for VPNs"
-    - import_tasks: 002-wireguard-vpn.yml
+    - import_tasks: 002-wireguard-vpn.yaml
 
 - name: Setup DNS
   when: "'master' in group_names"
@@ -60,7 +60,7 @@
   block:
     - debug:
         msg: "[BIBIGRID] Setup DNS"
-    - import_tasks: 003-dns.yml
+    - import_tasks: 003-dns.yaml
 
 - name: Update host file on worker
   when: "'workers' in group_names"
@@ -68,7 +68,7 @@
   block:
     - debug:
         msg: "[BIBIGRID] Update hosts"
-    - import_tasks: 004-update-hosts.yml
+    - import_tasks: 004-update-hosts.yaml
 
 - name: Configure database
   when: "'master' in group_names"
@@ -76,7 +76,7 @@
   block:
     - debug:
         msg: "[BIBIGRID] Configure database"
-    - import_tasks: 006-database.yml
+    - import_tasks: 006-database.yaml
 
 - name: Setup additional binary executables /usr/local/bin/
   when:
@@ -85,7 +85,7 @@
   block:
     - debug:
         msg: "[BIBIGRID] Setup additional binary executables /usr/local/bin/"
-    - import_tasks: 010-bin-server.yml
+    - import_tasks: 010-bin-server.yaml
 
 - name: Setup Zabbix Agent
   when:
@@ -94,21 +94,21 @@
   block:
     - debug:
         msg: "[BIBIGRID] Setup Zabbix Agent"
-    - import_tasks: 011-zabbix-server.yml
+    - import_tasks: 011-zabbix-server.yaml
       when: "'master' in group_names"
-    - import_tasks: 011-zabbix-agent.yml
+    - import_tasks: 011-zabbix-agent.yaml
 
 - debug:
     msg: "[BIBIGRID] Generate directory structure available on all hosts"
 - name: Generate general directory structure available on all hosts
-  import_tasks: 020-disk.yml
+  import_tasks: 020-disk.yaml
   tags: ["disk"]
 - name: Generate server directory structure available on all hosts
-  import_tasks: 020-disk-server.yml
+  import_tasks: 020-disk-server.yaml
   when: "'master' in group_names"
   tags: ["disk"]
 - name: Generate worker directory structure available on all hosts
-  import_tasks: 020-disk-worker.yml
+  import_tasks: 020-disk-worker.yaml
   when: "'master' not in group_names"
   tags: ["disk"]
 
@@ -119,15 +119,15 @@
   block:
     - debug:
         msg: "[BIBIGRID] Setup NFS"
-    - import_tasks: 025-nfs-server.yml
+    - import_tasks: 025-nfs-server.yaml
       when: "'master' in group_names"
-    - import_tasks: 025-nfs-worker.yml
+    - import_tasks: 025-nfs-worker.yaml
       when: "'master' not in group_names"
 
 - name: Setup Docker
   debug:
     msg: "[BIBIGRID] Setup Docker"
-- import_tasks: 030-docker.yml
+- import_tasks: 030-docker.yaml
   tags: ["docker"]
 
 - name: Setup Slurm
@@ -135,9 +135,9 @@
   block:
     - debug:
         msg: "[BIBIGRID] Setup Slurm"
-    - import_tasks: 042-slurm.yml
+    - import_tasks: 042-slurm.yaml
       when: "'vpngtw' not in group_names"
-    - import_tasks: 042-slurm-server.yml
+    - import_tasks: 042-slurm-server.yaml
       when: "'master' in group_names"
 
 - name: Setup Theia
@@ -148,4 +148,4 @@
   block:
     - debug:
         msg: "[BIBIGRID] Setup Theia"
-    - import_tasks: 999-theia.yml
+    - import_tasks: 999-theia.yaml
