fixes #394 - remove host from zabbix when terminated

--- a/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yaml
@@ -156,6 +156,7 @@
       - filelock
       - paramiko
       - ansible-runner
+      - pyzabbix
 
 - name: 'Add default user to ansible group'
   user:
