pleased linting by using false instead of no

--- a/resources/playbook/roles/bibigrid/tasks/011-zabbix-agent.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/011-zabbix-agent.yaml
@@ -5,7 +5,7 @@
     comment: "Zabbix Monitoring User"
     home: /var/lib/zabbix
     shell: /usr/sbin/nologin
-    createhome: no
+    create_home: false
 
 - name: Create zabbix_agent dropin directory
   file:
