fixed missing newline at EOF. Summarized restarts.

--- a/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yaml
+++ b/resources/playbook/roles/bibigrid/tasks/042-slurm-server.yaml
@@ -213,22 +213,12 @@
         - slurmdbd
         - slurmrestd
 
-- name: slurmdbd
+- name: Restart Slurm services
   systemd:
-    name: slurmdbd
+    name: "{{ item }}"
     state: restarted
-
-- name: slurmrestd
-  systemd:
-    name: slurmrestd
-    state: restarted
-
-- name: slurmctld
-  systemd:
-    name: slurmctld
-    state: restarted
-
-- name: slurmd
-  systemd:
-    name: slurmd
-    state: restarted
+  loop:
+    - slurmdbd
+    - slurmrestd
+    - slurmctld
+    - slurmd
